[package]
name = "vulkan-exp"
version = "0.0.1"
edition = "2018"

[dependencies]
vulkano = "0.20.0"
vulkano-win = "0.20.0"
vulkano-shaders = "0.20.0"
winit = "0.24"
image = "0.23"
byteorder = "1.3"

cgmath = "0.17.0"

[[bin]]
name = "triangle"
path = "triangle/triangle.rs"

[[bin]]
name = "obj"
path = "obj/main.rs"
